Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-6421

Failed to set max_pages_per_rpc permanently

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.8.0
    • Lustre 2.5.3
    • 3
    • 9223372036854775807

      1. get value of max_pages_per_rpc

      1. lctl get_param osc.*.max_pages_per_rpc
        osc.server-OST0000-osc-ffff8800901b9800.max_pages_per_rpc=256

      2. set it permanently with the value 1024

      1. lctl set_param -P osc.*.max_pages_per_rpc=1024
      2. lctl get_param osc.*.max_pages_per_rpc
        osc.server-OST0000-osc-ffff8800901b9800.max_pages_per_rpc=1024

      3. remount OSTs and lustre client

      4. get the value of max_pages_per_rpc again

      1. lctl get_param osc.*.max_pages_per_rpc
        osc.server-OST0000-osc-ffff88062e2a2800.max_pages_per_rpc=256

      The value not changed.

            emoly.liu Emoly Liu
            gnlwlb wu libin (Inactive)
            Votes:
            1 Vote for this issue
            Watchers:
            9 Start watching this issue

              Created:
              Updated:
              Resolved: